force-app/main/default/objects/SCOC__LCRDataSourceAnalysis__c/SCOC__LCRDataSourceAnalysis__c.object-meta.xml
<CustomObject>
    <description>Liquid Credit Analysis List</description>
    <label>LCRDataSourceAnalysis</label>
    <nameField>
        <displayFormat>LCREDSA-{00000}</displayFormat>
        <label>Liquid Credit Response Entity DataSource</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCRDataSourceAnalyses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>