force-app/main/default/objects/SCOC__LCRDataSourceAnalysis__c/fields/SCOC__Code__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Code__c</fullName>
    <description>DataSourceAnalysis Code.</description>
    <label>DataSource Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DB</fullName>
                <label>Dunn &amp; BradStreet</label>
            </value>
            <value>
                <fullName>EFU</fullName>
                <label>Equifax</label>
            </value>
            <value>
                <fullName>XPN</fullName>
                <label>Experian</label>
            </value>
            <value>
                <fullName>XPB</fullName>
                <label>Experian (Business)</label>
            </value>
            <value>
                <fullName>TU</fullName>
                <label>TransUnion</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>