force-app/main/default/objects/SCOC__LCRDataSourceAnalysis__c/fields/SCOC__productCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__productCode__c</fullName>
    <description>This field contains the Product Code for business data sources.</description>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>